// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line Line renders correctly 1`] = `
<SteppedLineTo
  className=""
  from={
    Object {
      "height": 0,
      "left": 0,
      "top": 0,
      "width": 0,
    }
  }
  offset={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  orientation="v"
  style={Object {}}
  to={
    Object {
      "height": 0,
      "left": 100,
      "top": 0,
      "width": 0,
    }
  }
>
  <div
    className="stepped-line-to"
  >
    <SteppedLine
      className=""
      from={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
      offset={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      orientation="v"
      style={Object {}}
      to={
        Object {
          "height": 0,
          "left": 100,
          "top": 0,
          "width": 0,
        }
      }
      x0={0}
      x1={100}
      y0={0}
      y1={0}
    >
      <div
        className="stepped-line"
      >
        <Line
          className=""
          from={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
          offset={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          orientation="v"
          style={Object {}}
          to={
            Object {
              "height": 0,
              "left": 100,
              "top": 0,
              "width": 0,
            }
          }
          x0={0}
          x1={0}
          y0={0}
          y1={0}
        >
          <div
            className="line-core"
            style={
              Object {
                "left": "0px",
                "top": "0px",
                "transform": "rotate(0deg)",
                "width": "0px",
              }
            }
          />
        </Line>
        <Line
          className=""
          from={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
          offset={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          orientation="v"
          style={Object {}}
          to={
            Object {
              "height": 0,
              "left": 100,
              "top": 0,
              "width": 0,
            }
          }
          x0={100}
          x1={100}
          y0={0}
          y1={0}
        >
          <div
            className="line-core"
            style={
              Object {
                "left": "100px",
                "top": "0px",
                "transform": "rotate(0deg)",
                "width": "0px",
              }
            }
          />
        </Line>
        <Line
          className=""
          from={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
          offset={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          orientation="v"
          style={Object {}}
          to={
            Object {
              "height": 0,
              "left": 100,
              "top": 0,
              "width": 0,
            }
          }
          x0={-1}
          x1={100}
          y0={0}
          y1={0}
        >
          <div
            className="line-core"
            style={
              Object {
                "left": "-1px",
                "top": "0px",
                "transform": "rotate(0deg)",
                "width": "101px",
              }
            }
          />
        </Line>
      </div>
    </SteppedLine>
  </div>
</SteppedLineTo>
`;

exports[`Line offset works well 1`] = `
<SteppedLineTo
  className=""
  from={
    Object {
      "height": 0,
      "left": 0,
      "top": 0,
      "width": 0,
    }
  }
  offset={
    Object {
      "x": 100,
      "y": 100,
    }
  }
  orientation="v"
  style={Object {}}
  to={
    Object {
      "height": 0,
      "left": 100,
      "top": 0,
      "width": 0,
    }
  }
>
  <div
    className="stepped-line-to"
  >
    <SteppedLine
      className=""
      from={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
      offset={
        Object {
          "x": 100,
          "y": 100,
        }
      }
      orientation="v"
      style={Object {}}
      to={
        Object {
          "height": 0,
          "left": 100,
          "top": 0,
          "width": 0,
        }
      }
      x0={-100}
      x1={0}
      y0={-100}
      y1={-100}
    >
      <div
        className="stepped-line"
      >
        <Line
          className=""
          from={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
          offset={
            Object {
              "x": 100,
              "y": 100,
            }
          }
          orientation="v"
          style={Object {}}
          to={
            Object {
              "height": 0,
              "left": 100,
              "top": 0,
              "width": 0,
            }
          }
          x0={-100}
          x1={-100}
          y0={-100}
          y1={-100}
        >
          <div
            className="line-core"
            style={
              Object {
                "left": "-100px",
                "top": "-100px",
                "transform": "rotate(0deg)",
                "width": "0px",
              }
            }
          />
        </Line>
        <Line
          className=""
          from={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
          offset={
            Object {
              "x": 100,
              "y": 100,
            }
          }
          orientation="v"
          style={Object {}}
          to={
            Object {
              "height": 0,
              "left": 100,
              "top": 0,
              "width": 0,
            }
          }
          x0={0}
          x1={0}
          y0={-100}
          y1={-100}
        >
          <div
            className="line-core"
            style={
              Object {
                "left": "0px",
                "top": "-100px",
                "transform": "rotate(0deg)",
                "width": "0px",
              }
            }
          />
        </Line>
        <Line
          className=""
          from={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
          offset={
            Object {
              "x": 100,
              "y": 100,
            }
          }
          orientation="v"
          style={Object {}}
          to={
            Object {
              "height": 0,
              "left": 100,
              "top": 0,
              "width": 0,
            }
          }
          x0={-101}
          x1={0}
          y0={-100}
          y1={-100}
        >
          <div
            className="line-core"
            style={
              Object {
                "left": "-101px",
                "top": "-100px",
                "transform": "rotate(0deg)",
                "width": "101px",
              }
            }
          />
        </Line>
      </div>
    </SteppedLine>
  </div>
</SteppedLineTo>
`;
